# civicc-skeleton-oxidized

./: Cargo.toml  shell.nix  treesitter_parser_template_generator.py
coconut/: Cargo.toml
coconut/src/: lib.rs
src/: main.rs  parser.rs
traversal_generator_derive/: Cargo.toml
traversal_generator_derive/src/: lib.rs
tree-sitter-civicc/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-civicc/bindings/c/: tree-sitter-civicc.pc.in
tree-sitter-civicc/bindings/c/tree_sitter/: tree-sitter-civicc.h
tree-sitter-civicc/bindings/go/: binding.go  binding_test.go
tree-sitter-civicc/bindings/node/: binding.cc  index.js
tree-sitter-civicc/bindings/python/tests/: test_binding.py
tree-sitter-civicc/bindings/python/tree_sitter_civicc/: __init__.py  binding.c
tree-sitter-civicc/bindings/rust/: build.rs  lib.rs
tree-sitter-civicc/bindings/swift/TreeSitterCiviccTests/: TreeSitterCiviccTests.swift
tree-sitter-civicc/src/: grammar.json  node-types.json  parser.c
